feat(log): :loud_sound: 增强日志隔离，支持集群维度路径 & UI日志展示优化
在「GenerateServiceConfigCommand」新增 clusterId 字段，实现跨组件传参。
各 Handler/Actor（Kubernetes & Worker 模块）统一：
1. 启动时根据 clusterId 动态生成包含集群 ID 的 logger 名称，避免不同集群日志混淆
2. TaskLogDiscriminator 同时支持解析「TaskLogLogger-{clusterId}」格式

前端服务安装弹窗日志区域新增行号显示，提升可读性。

Signed-off-by: 任相鹏 <renxiangpeng@norinaviation.com>