@@ -65,7 +65,16 @@ public class KubernetesConfigureServiceHandler {
         this.serviceName = serviceName;
         this.serviceRoleName = serviceRoleName;
         this.serviceRoleFullName = CommonUtil.generateServiceRoleFullName(serviceName, serviceRoleName);
-        String loggerName = String.format("%s-%s-%s", Constants.TASK_LOG_LOGGER_NAME, serviceName, serviceRoleName);
+        var loggerName = "%s-%s-%s".formatted(Constants.TASK_LOG_LOGGER_NAME, serviceName, serviceRoleName);
+        logger = LoggerFactory.getLogger(loggerName);
+    }
+    
+    /**
+     * 设置集群ID，重新创建包含集群ID的logger
+     */
+    public void setClusterId(Long clusterId) {
+        var loggerName = "%s-%s-%s-%s".formatted(
+            Constants.TASK_LOG_LOGGER_NAME, clusterId, serviceName, serviceRoleName);
         logger = LoggerFactory.getLogger(loggerName);
     }
 
